Image distorted Fixes #1

--- a/files/style/weatherWarning.scss
+++ b/files/style/weatherWarning.scss
@@ -21,12 +21,15 @@
 
 	.headline {
 		display: flex;
+		align-items: center;
 		font-weight: 600;
 		border-bottom: 1px dotted $wcfContentBorder;
 		padding-bottom: 5px;
 
 		> img {
 			flex: 0 0 50px;
+			min-width: 50px;
+			height: 50px;
 		}
 
 		> span {
